--- a/PGLife/index.html
+++ b/PGLife/index.html
@@ -1,26 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome | PGLife</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Welcome | PGLife</title>
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
-  <link href="css/common.css" rel="stylesheet">
-  <link href="css/home.css" rel="stylesheet">
-</head>
-<body>
-  <div class="header sticky-top">
-    <nav class="navbar navbar-expand-md navbar-light">
-      <a class="navbar-brand" href="index.html">
-        <img src="img/logo.png"/>
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#my-navbar">
-<span class="navbar-toggler-icon"></span>
-      </button>
-    </nav>
-  </div>
-  
-</body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link href="css/common.css" rel="stylesheet" />
+    <link href="css/home.css" rel="stylesheet" />
+  </head>
+  <body>
+    <div class="header sticky-top">
+      <nav class="navbar navbar-expand-md navbar-light">
+        <a class="navbar-brand" href="index.html">
+          <img src="img/logo.png" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#my-navbar"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="my-navbar"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="#"
+                data-toggle="modal"
+                data-target="#signup-modal"
+              >
+                <i class="fas fa-user"></i>SignUp
+              </a>
+            </li>
+            <div class="nav-vl"></div>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="#"
+                data-toggle="modal"
+                data-target="#signin-modal"
+              >
+                <i class="fas fa-sign-in-alt"></i>LogIn
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+    <div class="loading"></div>
+    <div class="banner-container">
+      <h2 class="white pb-3">Happiness per Square Foot</h2>
+
+      <form id="search-form">
+        <div class="input-group city-search">
+          <input
+            typr="text"
+            class="form-control input-city"
+            id="city"
+            name="city"
+            placeholder="Enter Your City To Search For PGs"
+          />
+          <div class="input-group-append">
+            <button type="submit" class="btn btn-secondary">
+              <i class="fa fa-search"></i>
+            </button>
+          </div>
+        </div>
+      </form>
+    </div>
+
+    <div class="page-container">
+      <h1 class="city-heading">Major Cities</h1>
+      <div class="row">
+        <div class="city-card-container col-md">
+          <a class="property_list.html">
+            <div class="city-card rounded-circle">
+              <img src="img/delhi.png" class="city-img" />
+            </div>
+          </a>
+        </div>
+        <div class="city-card-container col-md">
+          <a class="property_list.html">
+            <div class="city-card rounded-circle">
+              <img src="img/mumbai.png" class="city-img" />
+            </div>
+          </a>
+        </div>
+        <div class="city-card-container col-md">
+          <a class="property_list.html">
+            <div class="city-card rounded-circle">
+              <img src="img/hyderabad.png" class="city-img" />
+            </div>
+          </a>
+        </div>
+        <div class="city-card-container col-md">
+          <a class="property_list.html">
+            <div class="city-card rounded-circle">
+              <img src="img/chennai.png" class="city-img" />
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalToggleLabel">Modal 1</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            Show a second modal and hide this one with the button below.
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-primary" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Open second modal</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal fade" id="exampleModalToggle2" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalToggleLabel2">Modal 2</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            Hide this modal and show the first with the button below.
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-primary" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Back to first</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <button class="btn btn-primary" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Open first modal</button>
+  </body>
 </html>
