--- a/PGLife/index.html
+++ b/PGLife/index.html
@@ -4,48 +4,49 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome | PGLife</title>
-
+    <!-- Bootstrap CSS -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"/>
+    <!-- FontAwesome Icons -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
     <link href="css/common.css" rel="stylesheet" />
     <link href="css/home.css" rel="stylesheet" />
   </head>
   <body>
+    <!-- Header Section -->
     <div class="header sticky-top">
-      <nav class="navbar navbar-expand-md navbar-light">
+      <nav class="navbar navbar-expand-md navbar-light bg-light">
         <a class="navbar-brand" href="index.html">
-          <img src="img/logo.png" />
+          <img src="img/logo.png" alt="PGLife Logo" />
         </a>
         <button
           class="navbar-toggler"
           type="button"
-          data-toggle="collapse"
-          data-target="#my-navbar"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarContent"
+          aria-controls="navbarContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div
           class="collapse navbar-collapse justify-content-end"
-          id="my-navbar"
+          id="navbarContent"
         >
           <ul class="navbar-nav">
             <li class="nav-item">
               <a
                 class="nav-link"
                 href="#"
-                data-toggle="modal"
-                data-target="#signup-modal"
+                data-bs-toggle="modal"
+                data-bs-target="#signupModal"
               >
-                <i class="fas fa-user"></i>SignUp
+                <i class="fas fa-user-plus"></i> Sign Up
               </a>
             </li>
             <div class="nav-vl"></div>
@@ -53,104 +54,221 @@
               <a
                 class="nav-link"
                 href="#"
-                data-toggle="modal"
-                data-target="#signin-modal"
+                data-bs-toggle="modal"
+                data-bs-target="#loginModal"
               >
-                <i class="fas fa-sign-in-alt"></i>LogIn
+                <i class="fas fa-sign-in-alt"></i> Log In
               </a>
             </li>
           </ul>
         </div>
       </nav>
     </div>
-    <div class="loading"></div>
-    <div class="banner-container">
-      <h2 class="white pb-3">Happiness per Square Foot</h2>
 
+    <!-- Banner Section -->
+    <div class="banner-container text-center">
+      <h2 class="text-white pb-3">Happiness per Square Foot</h2>
       <form id="search-form">
         <div class="input-group city-search">
           <input
-            typr="text"
+            type="text"
             class="form-control input-city"
             id="city"
             name="city"
-            placeholder="Enter Your City To Search For PGs"
+            placeholder="Enter Your City to Search for PGs"
           />
-          <div class="input-group-append">
-            <button type="submit" class="btn btn-secondary">
-              <i class="fa fa-search"></i>
-            </button>
-          </div>
+          <button type="submit" class="btn btn-secondary">
+            <i class="fa fa-search"></i>
+          </button>
         </div>
       </form>
     </div>
 
+    <!-- Major Cities Section -->
     <div class="page-container">
-      <h1 class="city-heading">Major Cities</h1>
-      <div class="row">
+      <h1 class="text-center">Major Cities</h1>
+      <div class="row text-center">
         <div class="city-card-container col-md">
-          <a class="property_list.html">
+          <a href="property_list.html">
             <div class="city-card rounded-circle">
-              <img src="img/delhi.png" class="city-img" />
+              <img src="img/delhi.png" class="city-img" alt="Delhi" />
             </div>
           </a>
         </div>
         <div class="city-card-container col-md">
-          <a class="property_list.html">
+          <a href="property_list.html">
             <div class="city-card rounded-circle">
-              <img src="img/mumbai.png" class="city-img" />
+              <img src="img/mumbai.png" class="city-img" alt="Mumbai" />
             </div>
           </a>
         </div>
         <div class="city-card-container col-md">
-          <a class="property_list.html">
+          <a href="property_list.html">
             <div class="city-card rounded-circle">
-              <img src="img/hyderabad.png" class="city-img" />
+              <img src="img/hyderabad.png" class="city-img" alt="Hyderabad" />
             </div>
           </a>
         </div>
         <div class="city-card-container col-md">
-          <a class="property_list.html">
+          <a href="property_list.html">
             <div class="city-card rounded-circle">
-              <img src="img/chennai.png" class="city-img" />
+              <img src="img/chennai.png" class="city-img" alt="Chennai" />
             </div>
           </a>
         </div>
       </div>
     </div>
 
-    <div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
-      <div class="modal-dialog modal-dialog-centered">
+    <!-- Signup Modal -->
+    <div
+      class="modal fade"
+      id="signupModal"
+      tabindex="-1"
+      aria-labelledby="signupModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalToggleLabel">Modal 1</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <h5 class="modal-title" id="signupModalLabel">Sign Up</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
           </div>
           <div class="modal-body">
-            Show a second modal and hide this one with the button below.
-          </div>
-          <div class="modal-footer">
-            <button class="btn btn-primary" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Open second modal</button>
+            <form id="signupForm">
+              <div class="mb-3">
+                <label for="signupFullName" class="form-label">Full Name</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="signupFullName"
+                  placeholder="Enter your full name"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="signupEmail" class="form-label"
+                  >Email address</label
+                >
+                <input
+                  type="email"
+                  class="form-control"
+                  id="signupEmail"
+                  placeholder="Enter your email"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="signupPassword" class="form-label">Password</label>
+                <input
+                  type="password"
+                  class="form-control"
+                  id="signupPassword"
+                  placeholder="Enter your password"
+                  required
+                />
+              </div>
+              <button type="submit" class="btn btn-primary w-100">
+                Sign Up
+              </button>
+            </form>
           </div>
         </div>
       </div>
     </div>
-    <div class="modal fade" id="exampleModalToggle2" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
-      <div class="modal-dialog modal-dialog-centered">
+
+    <!-- Login Modal -->
+    <div
+      class="modal fade"
+      id="loginModal"
+      tabindex="-1"
+      aria-labelledby="loginModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalToggleLabel2">Modal 2</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <h5 class="modal-title" id="loginModalLabel">Log In</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
           </div>
           <div class="modal-body">
-            Hide this modal and show the first with the button below.
+            <form id="loginForm">
+              <div class="mb-3">
+                <label for="loginEmail" class="form-label">Email address</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="loginEmail"
+                  placeholder="Enter your email"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="loginPassword" class="form-label">Password</label>
+                <input
+                  type="password"
+                  class="form-control"
+                  id="loginPassword"
+                  placeholder="Enter your password"
+                  required
+                />
+              </div>
+              <button type="submit" class="btn btn-primary w-100">
+                Log In
+              </button>
+            </form>
           </div>
           <div class="modal-footer">
-            <button class="btn btn-primary" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Back to first</button>
+            <span>
+              <a
+                href="#"
+                data-bs-dismiss="modal"
+                data-bs-toggle="modal"
+                data-bs-target="#signupModal"
+                >Click Here</a
+              >
+              to register a new account
+            </span>
           </div>
         </div>
       </div>
     </div>
-    <button class="btn btn-primary" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Open first modal</button>
+
+    <!--FOOTER-->
+    <div class="footer">
+      <div class="page-container footer-container">
+        <div class="footer-cities">
+          <div class="footer-city">
+            <a href="property_list.html">PG in Delhi</a>
+          </div>
+          <div class="footer-city">
+            <a href="property_list.html">PG in Mumbai</a>
+          </div>
+          <div class="footer-city">
+            <a href="property_list.html">PG in Banglore</a>
+          </div>
+          <div class="footer-city">
+            <a href="property_list.html">PG in Hyderabad</a>
+          </div>
+        </div>
+        <div class="footer-copyright">
+@2025 Copyright PG Life
+        </div>
+      </div>
+
+    </div>
+
+    <!-- Bootstrap JS -->
+     <script type="text/javascript" src="js/jquery.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
