--- a/PGLife/dashboard.html
+++ b/PGLife/dashboard.html
@@ -23,8 +23,7 @@
   <body>
     <!-- Header Section -->
     <header class="header sticky-top">
-      <nav class="navbar navbar-expand-md navbar-light bg-white">
-        <div class="container">
+      <nav class="navbar navbar-expand-md navbar-light">
           <a class="navbar-brand" href="index.html">
             <img src="img/logo.png" alt="PG Life Logo" />
           </a>
@@ -49,7 +48,7 @@
                 <span class="nav-name text-black me-3">Hi, Vikash Kumar</span>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-primary" href="dashboard.html">
+                <a class="nav-link" href="dashboard.html">
                   <i class="fas fa-user"></i> Dashboard
                 </a>
               </li>
@@ -61,13 +60,12 @@
               </li>
             </ul>
           </div>
-        </div>
       </nav>
     </header>
 
     <!-- Breadcrumb -->
     <nav aria-label="breadcrumb" class="bg-light py-2">
-      <div class="container">
+      <div>
         <ol class="breadcrumb mb-0">
           <li class="breadcrumb-item">
             <a href="index.html">Home</a>
@@ -83,7 +81,7 @@
       <div class="row align-items-center">
         <div class="col-md-4 profile-img-container text-center mb-3 mb-md-0">
           <!-- Enlarged Profile Icon -->
-          <i class="fas fa-user profile-img display-1 bg-primary text-white p-5 rounded-circle"></i>
+          <i class="fas fa-user profile-img display-1 text-white p-5 rounded-circle"></i>
         </div>
         <div class="col-md-8">
           <h2>Vikash Kumar</h2>
